[build-system]
requires = ["setuptools >= 58.0"]
build-backend = "setuptools.build_meta"

[project]
name = "endor_scanworker"
description = "Endor Labs secretless scan worker manager"
version = "0.1.0"
authors = [
    { name = "Darren Meyer (Endor Labs)", email = "darren@endor.ai" }
]
requires-python = ">=3.9"
dependencies = [
    "click==8.1.3",
    "boto3[crt]~=1.26"
]

[tool.setuptools]
packages = ["endor_scanworker", "endor_aws_secrets"]

[project.scripts]
endor-scanworker = "endor_scanworker.cli:main"
